--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,8 @@ buildscript {
 
 allprojects {
     repositories {
-        //google()
-//        mavenCentral()
-        // Warning: this repository is going to shut down soon
+        google()
+        mavenCentral()
     }
 }
 
