--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="dev.kelocen.loadstatus">
 
+  <uses-permission android:name="android.permission.INTERNET" />
+
   <application
     android:allowBackup="true"
     android:fullBackupContent="true"
@@ -11,9 +13,10 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/Theme.LoadStatus">
-    <activity android:name=".main.MainActivity"
-      android:theme="@style/Theme.LoadStatus.NoActionBar"
-      android:exported="true">
+    <activity
+      android:exported="true"
+      android:name=".main.MainActivity"
+      android:theme="@style/Theme.LoadStatus.NoActionBar">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
