feat: Add notification action

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
+    <activity
+      android:launchMode="singleTop"
+      android:name=".detail.DetailActivity"
+      android:theme="@style/Theme.LoadStatus.NoActionBar" />
   </application>
 
 </manifest>
