--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
     <activity
       android:exported="true"
       android:name=".main.MainActivity"
+      android:configChanges="orientation|keyboardHidden|keyboard|screenSize"
       android:theme="@style/Theme.LoadStatus.NoActionBar">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
